[tool.poetry]
name = "airqua"
version = "0.1.0"
description = ""
authors = ["mohammad amin alavian <m.amin.alavian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
tqdm = "^4.65.0"
PyYAML = "^6.0"
bs4 = "^0.0.1"
sqlalchemy = "^2.0.17"
schedule = "^1.2.0"
jdatetime = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
